Update some defaults

--- a/Widget.ipynb
+++ b/Widget.ipynb
@@ -22,6 +22,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c143b78f-cb23-49b2-ae9e-6ed83922d48b",
+   "metadata": {},
+   "source": [
+    "# Setup global settings"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "4c96b05f-d9c1-4cf4-9e78-5982ba2ff42d",
@@ -50,16 +58,8 @@
     "    'dist_healthy_LAIP2': 3,\n",
     "    'std_LAIP2_x': 0.5,\n",
     "    'std_LAIP2_y': 0.5\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "bd7cd2fb-4d12-4877-9aa7-b964a0d641b0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "}\n",
+    "\n",
     "# Define a function to restore default values\n",
     "def restore_defaults(button):\n",
     "    n_cells_slider.value = default_values['n_cells']\n",
@@ -79,8 +79,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7c00c03f-a04a-48e1-b581-d493bb010694",
+   "metadata": {},
+   "source": [
+    "# Setup sliders"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 59,
    "id": "a0a5ad59-d67b-46a0-b832-02340ced1077",
    "metadata": {},
    "outputs": [],
@@ -98,18 +106,18 @@
     "mean_healthy_y_slider = widgets.FloatSlider(value=default_values['mean_healthy_y'], min=-10, max=10, step=0.1, description=\"Mean of non-leukemic cluster (Y-axis)\", style={'description_width': 'initial'}, layout=slider_layout)\n",
     "std_healthy_y_slider = widgets.FloatSlider(value=default_values['std_healthy_y'], min=0, max=3, step=0.1, description=\"Standard deviation of non-leukemic cluster (Y-axis)\", style={'description_width': 'initial'}, layout=slider_layout)\n",
     "\n",
-    "dist_healthy_LAIP1_slider = widgets.FloatSlider(value=default_values['dist_healthy_LAIP1'], min=-10, max=10, step=0.1, description=\"Distance between LAIP1+ and non-leukemic clusters\", style={'description_width': 'initial'}, layout=slider_layout)\n",
+    "dist_healthy_LAIP1_slider = widgets.FloatSlider(value=default_values['dist_healthy_LAIP1'], min=0, max=5, step=0.1, description=\"Distance between LAIP1+ and non-leukemic clusters\", style={'description_width': 'initial'}, layout=slider_layout)\n",
     "std_LAIP1_x_slider = widgets.FloatSlider(value=default_values['std_LAIP1_x'], min=0, max=3, step=0.1, description=\"Standard deviation of LAIP1+ cluster (X-axis)\", style={'description_width': 'initial'}, layout=slider_layout)\n",
     "std_LAIP1_y_slider = widgets.FloatSlider(value=default_values['std_LAIP1_y'], min=0, max=3, step=0.1, description=\"Standard deviation of LAIP1+ cluster (Y-axis)\", style={'description_width': 'initial'}, layout=slider_layout)\n",
     "\n",
-    "dist_healthy_LAIP2_slider = widgets.FloatSlider(value=default_values['dist_healthy_LAIP2'], min=-10, max=10, step=0.1, description=\"Distance between LAIP2+ and non-leukemic clusters\", style={'description_width': 'initial'}, layout=slider_layout)\n",
+    "dist_healthy_LAIP2_slider = widgets.FloatSlider(value=default_values['dist_healthy_LAIP2'], min=0, max=5, step=0.1, description=\"Distance between LAIP2+ and non-leukemic clusters\", style={'description_width': 'initial'}, layout=slider_layout)\n",
     "std_LAIP2_x_slider = widgets.FloatSlider(value=default_values['std_LAIP2_x'], min=0, max=3, step=0.1, description=\"Standard deviation of LAIP2+ cluster (X-axis)\", style={'description_width': 'initial'}, layout=slider_layout)\n",
     "std_LAIP2_y_slider = widgets.FloatSlider(value=default_values['std_LAIP2_y'], min=0, max=3, step=0.1, description=\"Standard deviation of LAIP2+ cluster (Y-axis)\", style={'description_width': 'initial'}, layout=slider_layout)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 60,
    "id": "1b28fc13-ee7d-4c6c-97c7-8535fb3ce78e",
    "metadata": {},
    "outputs": [],
@@ -174,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 61,
    "id": "ee1c4fc4-a772-4694-b2b0-94f6321a739d",
    "metadata": {},
    "outputs": [],
@@ -283,14 +291,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 62,
    "id": "85185c80-d565-4e29-8fb0-a9bbd6e50286",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "436374cee8564a2391d6d6ce387d9422",
+       "model_id": "efdf7e6213e04e8fa68151dedbae9bcf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -304,7 +312,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "652ea318a56642298d890aebb2fd63f5",
+       "model_id": "324bb1401d96462a832ab38052efe06a",
        "version_major": 2,
        "version_minor": 0
       },
