--- a/Widget.ipynb
+++ b/Widget.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "id": "c8472e5b-26c9-4441-9511-6f65f0f57990",
    "metadata": {},
    "outputs": [],
@@ -12,13 +12,34 @@
     "import ipywidgets as widgets\n",
     "from ipywidgets import interactive\n",
     "from IPython.display import display\n",
-    "from sklearn.datasets import make_blobs\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import matplotlib.gridspec as gridspec\n",
     "from sklearn import neighbors\n",
     "from sklearn.metrics import roc_curve, auc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "8970330c-06f6-4e71-8c2d-30bffc32d0fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
+   "source": [
+    "from simulate import simulate_samples\n",
+    "from plots import plot_simulation, plot_supervised\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -31,17 +52,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "4c96b05f-d9c1-4cf4-9e78-5982ba2ff42d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Global settings\n",
-    "label_healthy = \"Non-leukemic\"\n",
-    "label_diseased = \"Leukemic\"\n",
-    "label_x = \"LAIP1\"\n",
-    "label_y = \"LAIP2\"\n",
-    "\n",
     "# Define default values for sliders\n",
     "default_values = {\n",
     "    'n_cells': 10000,\n",
@@ -88,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 15,
    "id": "a0a5ad59-d67b-46a0-b832-02340ced1077",
    "metadata": {},
    "outputs": [],
@@ -117,188 +132,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "1b28fc13-ee7d-4c6c-97c7-8535fb3ce78e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def simulate_samples(n_cells, frac_leukemic_AML1, frac_leukemic_AML2, frac_leukemic_AML3,\n",
-    "                     mean_healthy_x, std_healthy_x, mean_healthy_y, std_healthy_y,\n",
-    "                     dist_healthy_LAIP1, std_LAIP1_x, std_LAIP1_y,\n",
-    "                     dist_healthy_LAIP2, std_LAIP2_x, std_LAIP2_y):\n",
-    "    # Convert string widget input into floats\n",
-    "    n_cells = float(n_cells)\n",
-    "    frac_leukemic_AML1 = float(frac_leukemic_AML1)\n",
-    "    frac_leukemic_AML2 = float(frac_leukemic_AML2)\n",
-    "    frac_leukemic_AML3 = float(frac_leukemic_AML3)\n",
-    "    mean_healthy_x = float(mean_healthy_x)\n",
-    "    std_healthy_x = float(std_healthy_x)\n",
-    "    mean_healthy_y = float(mean_healthy_y)\n",
-    "    std_healthy_y = float(std_healthy_y)\n",
-    "    dist_healthy_LAIP1 = float(dist_healthy_LAIP1)\n",
-    "    std_LAIP1_x = float(std_LAIP1_x)\n",
-    "    std_LAIP1_y = float(std_LAIP1_y)\n",
-    "    dist_healthy_LAIP2 = float(dist_healthy_LAIP2)\n",
-    "    std_LAIP2_x = float(std_LAIP2_x)\n",
-    "    std_LAIP2_y = float(std_LAIP2_y)\n",
-    "    \n",
-    "    # Setup clusters\n",
-    "    healthy_means = [mean_healthy_x, mean_healthy_y]\n",
-    "    healthy_stds = [std_healthy_x, std_healthy_y]\n",
-    "    LAIP1_means = [mean_healthy_x + dist_healthy_LAIP1, mean_healthy_y]\n",
-    "    LAIP1_stds = [std_LAIP1_x, std_LAIP1_y]\n",
-    "    LAIP2_means = [mean_healthy_x, mean_healthy_y + dist_healthy_LAIP2]\n",
-    "    LAIP2_stds = [std_LAIP2_x, std_LAIP2_y]\n",
-    "    # Combine clusters\n",
-    "    centers_NBM = [healthy_means]\n",
-    "    centers_AML1 = [healthy_means, LAIP1_means]\n",
-    "    centers_AML2 = centers_AML1\n",
-    "    centers_AML3 = [healthy_means, LAIP2_means]\n",
-    "    stds_NBM = [healthy_stds]\n",
-    "    stds_AML1 = [healthy_stds, LAIP1_stds]\n",
-    "    stds_AML2 = [healthy_stds, LAIP1_stds]\n",
-    "    stds_AML3 = [healthy_stds, LAIP2_stds]\n",
-    "    n_cells_AML1 = [round(n_cells - (n_cells * frac_leukemic_AML1)), round(n_cells * frac_leukemic_AML1)]\n",
-    "    n_cells_AML2 = [round(n_cells - (n_cells * frac_leukemic_AML2)), round(n_cells * frac_leukemic_AML2)]\n",
-    "    n_cells_AML3 = [round(n_cells - (n_cells * frac_leukemic_AML3)), round(n_cells * frac_leukemic_AML3)]\n",
-    "    # NBM\n",
-    "    X, y = make_blobs(n_samples=int(n_cells), centers=centers_NBM, cluster_std=stds_NBM, random_state=0)\n",
-    "    NBM = pd.DataFrame(X, columns=[label_x, label_y])\n",
-    "    NBM[\"Cluster\"] = np.where(y == 1, label_diseased, label_healthy)\n",
-    "    # AML1\n",
-    "    X, y = make_blobs(n_samples=n_cells_AML1, centers=centers_AML1, cluster_std=stds_AML1, random_state=0)\n",
-    "    AML1 = pd.DataFrame(X, columns=[label_x, label_y])\n",
-    "    AML1[\"Cluster\"] = np.where(y == 1, label_diseased, label_healthy)\n",
-    "    # AML2\n",
-    "    X, y = make_blobs(n_samples=n_cells_AML2, centers=centers_AML2, cluster_std=stds_AML2, random_state=0)\n",
-    "    AML2 = pd.DataFrame(X, columns=[label_x, label_y])\n",
-    "    AML2[\"Cluster\"] = np.where(y == 1, label_diseased, label_healthy)\n",
-    "    # AML3\n",
-    "    X, y = make_blobs(n_samples=n_cells_AML3, centers=centers_AML3, cluster_std=stds_AML3, random_state=0)\n",
-    "    AML3 = pd.DataFrame(X, columns=[label_x, label_y])\n",
-    "    AML3[\"Cluster\"] = np.where(y == 1, label_diseased, label_healthy)\n",
-    "    return NBM, AML1, AML2, AML3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "id": "ee1c4fc4-a772-4694-b2b0-94f6321a739d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_samples(n_cells, frac_leukemic_AML1, frac_leukemic_AML2, frac_leukemic_AML3,\n",
-    "                     mean_healthy_x, std_healthy_x, mean_healthy_y, std_healthy_y,\n",
-    "                     dist_healthy_LAIP1, std_LAIP1_x, std_LAIP1_y,\n",
-    "                     dist_healthy_LAIP2, std_LAIP2_x, std_LAIP2_y):\n",
-    "    NBM, AML1, AML2, AML3 = simulate_samples(n_cells, frac_leukemic_AML1, frac_leukemic_AML2, frac_leukemic_AML3,\n",
-    "                     mean_healthy_x, std_healthy_x, mean_healthy_y, std_healthy_y,\n",
-    "                     dist_healthy_LAIP1, std_LAIP1_x, std_LAIP1_y,\n",
-    "                     dist_healthy_LAIP2, std_LAIP2_x, std_LAIP2_y)\n",
-    "    xlims = (-6, 6)\n",
-    "    ylims = (-6, 6)\n",
-    "    \n",
-    "    fig = plt.figure(figsize=(20, 10))\n",
-    "    gs = gridspec.GridSpec(2, 4, figure=fig)\n",
-    "    \n",
-    "    # First subplot\n",
-    "    ax1 = fig.add_subplot(gs[0, 0])\n",
-    "    sns.scatterplot(data=NBM, x=\"LAIP1\", y=\"LAIP2\", hue=\"Cluster\", ax=ax1)\n",
-    "    ax1.set_xlim(xlims)\n",
-    "    ax1.set_ylim(ylims)\n",
-    "    ax1.set_title('NBM')\n",
-    "    \n",
-    "    # Second subplot\n",
-    "    ax2 = fig.add_subplot(gs[0, 1])\n",
-    "    sns.scatterplot(data=AML1, x=\"LAIP1\", y=\"LAIP2\", hue=\"Cluster\", hue_order=[\"Non-leukemic\", \"Leukemic\"], ax=ax2)\n",
-    "    ax2.set_xlim(xlims)\n",
-    "    ax2.set_ylim(ylims)\n",
-    "    ax2.set_title('AML1')\n",
-    "    \n",
-    "    # Third subplot\n",
-    "    ax3 = fig.add_subplot(gs[0, 2])\n",
-    "    sns.scatterplot(data=AML2, x=\"LAIP1\", y=\"LAIP2\", hue=\"Cluster\", hue_order=[\"Non-leukemic\", \"Leukemic\"], ax=ax3)\n",
-    "    ax3.set_xlim(xlims)\n",
-    "    ax3.set_ylim(ylims)\n",
-    "    ax3.set_title('AML2')\n",
-    "    \n",
-    "    # Fourth subplot\n",
-    "    ax4 = fig.add_subplot(gs[0, 3])\n",
-    "    sns.scatterplot(data=AML3, x=\"LAIP1\", y=\"LAIP2\", hue=\"Cluster\", hue_order=[\"Non-leukemic\", \"Leukemic\"], ax=ax4)\n",
-    "    ax4.set_xlim(xlims)\n",
-    "    ax4.set_ylim(ylims)\n",
-    "    ax4.set_title('AML3')\n",
-    "\n",
-    "    # Train nearest-neighbor classifier\n",
-    "    df_X = AML1[[\"LAIP1\", \"LAIP2\"]]\n",
-    "    clf = neighbors.KNeighborsClassifier(5, weights='uniform')\n",
-    "    clf.fit(df_X, np.where(AML1[\"Cluster\"]==\"Leukemic\",1,0))\n",
-    "    # Step 3: Plot the decision surface\n",
-    "    # Create a mesh to plot in\n",
-    "    x_min, x_max = xlims\n",
-    "    y_min, y_max = ylims\n",
-    "    xx, yy = np.meshgrid(np.arange(x_min, x_max, 0.1), np.arange(y_min, y_max, 0.1))\n",
-    "    # Plot decision boundary\n",
-    "    Z = clf.predict(np.c_[xx.ravel(), yy.ravel()])\n",
-    "    Z = Z.reshape(xx.shape)\n",
-    "\n",
-    "    ax5 = fig.add_subplot(gs[1, 0])\n",
-    "    plt.contourf(xx, yy, Z, alpha=0.3, cmap=plt.cm.coolwarm)\n",
-    "    sns.scatterplot(data=AML1, x=\"LAIP1\", y=\"LAIP2\", hue=\"Cluster\", hue_order=[\"Non-leukemic\", \"Leukemic\"])\n",
-    "    ax5.set_xlim(xlims)\n",
-    "    ax5.set_ylim(ylims)\n",
-    "    ax5.set_title('AML1 (training set)')\n",
-    "\n",
-    "    ax6 = fig.add_subplot(gs[1, 1])\n",
-    "    plt.contourf(xx, yy, Z, alpha=0.3, cmap=plt.cm.coolwarm)\n",
-    "    sns.scatterplot(data=AML2, x=\"LAIP1\", y=\"LAIP2\", hue=\"Cluster\", hue_order=[\"Non-leukemic\", \"Leukemic\"])\n",
-    "    ax6.set_xlim(xlims)\n",
-    "    ax6.set_ylim(ylims)\n",
-    "    ax6.set_title('AML2')\n",
-    "\n",
-    "    ax7 = fig.add_subplot(gs[1, 2])\n",
-    "    plt.contourf(xx, yy, Z, alpha=0.3, cmap=plt.cm.coolwarm)\n",
-    "    sns.scatterplot(data=AML3, x=\"LAIP1\", y=\"LAIP2\", hue=\"Cluster\", hue_order=[\"Non-leukemic\", \"Leukemic\"])\n",
-    "    ax7.set_xlim(xlims)\n",
-    "    ax7.set_ylim(ylims)\n",
-    "    ax7.set_title('AML3')\n",
-    "\n",
-    "\n",
-    "    ax8 = fig.add_subplot(gs[1, 3])\n",
-    "    y_score = clf.predict_proba(AML1[[\"LAIP1\", \"LAIP2\"]])[:, 1]\n",
-    "    print(y_score)\n",
-    "    print(np.where(AML1[\"Cluster\"]==\"Leukemic\",1,0))\n",
-    "    fpr, tpr, _ = roc_curve(np.where(AML1[\"Cluster\"]==\"Leukemic\",1,0), y_score)\n",
-    "    roc_auc = auc(fpr, tpr)\n",
-    "    plt.plot(fpr, tpr, label=f'AML1 (AUC = {roc_auc:.2f})')\n",
-    "\n",
-    "    y_score = clf.predict_proba(AML2[[\"LAIP1\", \"LAIP2\"]])[:, 1]\n",
-    "    print(y_score)\n",
-    "    print(np.where(AML2[\"Cluster\"]==\"Leukemic\",1,0))\n",
-    "    fpr, tpr, _ = roc_curve(np.where(AML2[\"Cluster\"]==\"Leukemic\",1,0), y_score)\n",
-    "    roc_auc = auc(fpr, tpr)\n",
-    "    plt.plot(fpr, tpr, label=f'AML2 (AUC = {roc_auc:.2f})')\n",
-    "\n",
-    "    y_score = clf.predict_proba(AML3[[\"LAIP1\", \"LAIP2\"]])[:, 1]\n",
-    "    print(y_score)\n",
-    "    print(np.where(AML3[\"Cluster\"]==\"Leukemic\",1,0))\n",
-    "    fpr, tpr, _ = roc_curve(np.where(AML3[\"Cluster\"]==\"Leukemic\",1,0), y_score)\n",
-    "    roc_auc = auc(fpr, tpr)\n",
-    "    plt.plot(fpr, tpr, label=f'AML3 (AUC = {roc_auc:.2f})')\n",
-    "\n",
-    "    plt.legend()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "id": "85185c80-d565-4e29-8fb0-a9bbd6e50286",
+   "execution_count": 10,
+   "id": "8b253ac0-dce8-4a14-860b-e649f876e69b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "efdf7e6213e04e8fa68151dedbae9bcf",
+       "model_id": "297a23e479ea47adb5eb4b4959a08c38",
        "version_major": 2,
        "version_minor": 0
       },
@@ -312,7 +153,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "324bb1401d96462a832ab38052efe06a",
+       "model_id": "b1b3b3ab97664b7db7cda8f446e0e4f2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -330,7 +171,7 @@
     "restore_defaults_button.on_click(restore_defaults)\n",
     "\n",
     "# Define the interactive plot with sliders\n",
-    "interactive_plot = interactive(plot_samples,\n",
+    "interactive_plot = interactive(plot_supervised,\n",
     "                               n_cells = n_cells_slider,\n",
     "                               frac_leukemic_AML1 = frac_leukemic_AML1_slider,\n",
     "                               frac_leukemic_AML2 = frac_leukemic_AML2_slider,\n",
@@ -349,6 +190,75 @@
     "# Display the interactive plot and the restore defaults button\n",
     "display(interactive_plot, restore_defaults_button)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "85185c80-d565-4e29-8fb0-a9bbd6e50286",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a62325d3c9d542a991c57b2bd02e1de1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=10000, description='Total cells', layout=Layout(width='400px'), max=1000…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2713cf08f03444328faf0bae23d388a0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(button_style='primary', description='Restore Defaults', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Create a button to restore defaults\n",
+    "restore_defaults_button = widgets.Button(description=\"Restore Defaults\", button_style='primary')\n",
+    "restore_defaults_button.on_click(restore_defaults)\n",
+    "\n",
+    "# Define the interactive plot with sliders\n",
+    "interactive_plot = interactive(plot_simulation,\n",
+    "                               n_cells = n_cells_slider,\n",
+    "                               frac_leukemic_AML1 = frac_leukemic_AML1_slider,\n",
+    "                               frac_leukemic_AML2 = frac_leukemic_AML2_slider,\n",
+    "                               frac_leukemic_AML3 = frac_leukemic_AML3_slider,\n",
+    "                               mean_healthy_x = mean_healthy_x_slider,\n",
+    "                               std_healthy_x = std_healthy_x_slider,\n",
+    "                               mean_healthy_y = mean_healthy_y_slider,\n",
+    "                               std_healthy_y = std_healthy_y_slider,\n",
+    "                               dist_healthy_LAIP1 = dist_healthy_LAIP1_slider,\n",
+    "                               std_LAIP1_x = std_LAIP1_x_slider,\n",
+    "                               std_LAIP1_y = std_LAIP1_y_slider,\n",
+    "                               dist_healthy_LAIP2 = dist_healthy_LAIP2_slider,\n",
+    "                               std_LAIP2_x = std_LAIP2_x_slider,\n",
+    "                               std_LAIP2_y = std_LAIP2_y_slider)\n",
+    "\n",
+    "# Display the interactive plot and the restore defaults button\n",
+    "display(interactive_plot, restore_defaults_button)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e0664f6-96e6-4605-adb3-c47e0b1287f7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
