--- a/Widget.ipynb
+++ b/Widget.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "c8472e5b-26c9-4441-9511-6f65f0f57990",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "id": "8970330c-06f6-4e71-8c2d-30bffc32d0fd",
    "metadata": {},
    "outputs": [
@@ -37,23 +37,15 @@
    ],
    "source": [
     "from simulate import simulate_samples\n",
-    "from plots import plot_simulation, plot_supervised\n",
+    "from plots import plot_simulation, plot_supervised, plot_cluster_with_normal\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c143b78f-cb23-49b2-ae9e-6ed83922d48b",
-   "metadata": {},
-   "source": [
-    "# Setup global settings"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "4c96b05f-d9c1-4cf4-9e78-5982ba2ff42d",
+   "execution_count": 43,
+   "id": "ea1fe119-f079-4d4f-be73-04793f7575b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,71 +67,110 @@
     "    'std_LAIP2_y': 0.5\n",
     "}\n",
     "\n",
+    "# Create sliders with default values\n",
+    "slider_specs = {\n",
+    "    'n_cells': ('Total cells', 1, 100000, 1),\n",
+    "    'frac_leukemic_AML1': ('Fraction leukemic cells in AML1', 0, 1, 0.01),\n",
+    "    'frac_leukemic_AML2': ('Fraction leukemic cells in AML2', 0, 1, 0.01),\n",
+    "    'frac_leukemic_AML3': ('Fraction leukemic cells in AML3', 0, 1, 0.01),\n",
+    "    'mean_healthy_x': ('Mean of non-leukemic cluster (X-axis)', -10, 10, 0.1),\n",
+    "    'std_healthy_x': ('Standard deviation of non-leukemic cluster (X-axis)', 0, 3, 0.1),\n",
+    "    'mean_healthy_y': ('Mean of non-leukemic cluster (Y-axis)', -10, 10, 0.1),\n",
+    "    'std_healthy_y': ('Standard deviation of non-leukemic cluster (Y-axis)', 0, 3, 0.1),\n",
+    "    'dist_healthy_LAIP1': ('Distance NBM/LAIP1', 0, 4, 0.01),\n",
+    "    'std_LAIP1_x': ('Standard deviation of LAIP1+ cluster (X-axis)', 0, 3, 0.1),\n",
+    "    'std_LAIP1_y': ('Standard deviation of LAIP1+ cluster (Y-axis)', 0, 3, 0.1),\n",
+    "    'dist_healthy_LAIP2': ('Distance between NBM/LAIP2', 0, 4, 0.01),\n",
+    "    'std_LAIP2_x': ('Standard deviation of LAIP2+ cluster (X-axis)', 0, 3, 0.1),\n",
+    "    'std_LAIP2_y': ('Standard deviation of LAIP2+ cluster (Y-axis)', 0, 3, 0.1)\n",
+    "}\n",
+    "\n",
+    "slider_layout = widgets.Layout(width='400px')\n",
+    "sliders = {}\n",
+    "\n",
+    "for key, (description, min_val, max_val, step) in slider_specs.items():\n",
+    "    if 'n_cells' in key:\n",
+    "        slider = widgets.IntSlider(value=default_values[key], min=min_val, max=max_val, step=step, description=description, style={'description_width': 'initial'}, layout=slider_layout)\n",
+    "    else:\n",
+    "        slider = widgets.FloatSlider(value=default_values[key], min=min_val, max=max_val, step=step, description=description, style={'description_width': 'initial'}, layout=slider_layout)\n",
+    "    sliders[key] = slider\n",
+    "\n",
     "# Define a function to restore default values\n",
     "def restore_defaults(button):\n",
-    "    n_cells_slider.value = default_values['n_cells']\n",
-    "    frac_leukemic_AML1_slider.value = default_values['frac_leukemic_AML1']\n",
-    "    frac_leukemic_AML2_slider.value = default_values['frac_leukemic_AML2']\n",
-    "    frac_leukemic_AML3_slider.value = default_values['frac_leukemic_AML3']\n",
-    "    mean_healthy_x_slider.value = default_values['mean_healthy_x']\n",
-    "    std_healthy_x_slider.value = default_values['std_healthy_x']\n",
-    "    mean_healthy_y_slider.value = default_values['mean_healthy_y']\n",
-    "    std_healthy_y_slider.value = default_values['std_healthy_y']\n",
-    "    dist_healthy_LAIP1_slider.value = default_values['dist_healthy_LAIP1']\n",
-    "    std_LAIP1_x_slider.value = default_values['std_LAIP1_x']\n",
-    "    std_LAIP1_y_slider.value = default_values['std_LAIP1_y']\n",
-    "    dist_healthy_LAIP2_slider.value = default_values['dist_healthy_LAIP2']\n",
-    "    std_LAIP2_x_slider.value = default_values['std_LAIP2_x']\n",
-    "    std_LAIP2_y_slider.value = default_values['std_LAIP2_y']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7c00c03f-a04a-48e1-b581-d493bb010694",
-   "metadata": {},
-   "source": [
-    "# Setup sliders"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "a0a5ad59-d67b-46a0-b832-02340ced1077",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "slider_layout = widgets.Layout(width='400px')\n",
+    "    for key, slider in sliders.items():\n",
+    "        slider.value = default_values[key]\n",
     "\n",
-    "# Create sliders with default values\n",
-    "n_cells_slider = widgets.IntSlider(value=default_values['n_cells'], min=1, max=100000, step=1, description=\"Total cells\", style={'description_width': 'initial'}, layout=slider_layout)\n",
-    "frac_leukemic_AML1_slider = widgets.FloatSlider(value=default_values['frac_leukemic_AML1'], min=0, max=1, step=0.01, description=\"Fraction leukemic cells in AML1\", style={'description_width': 'initial'}, layout=slider_layout)\n",
-    "frac_leukemic_AML2_slider = widgets.FloatSlider(value=default_values['frac_leukemic_AML2'], min=0, max=1, step=0.01, description=\"Fraction leukemic cells in AML2\", style={'description_width': 'initial'}, layout=slider_layout)\n",
-    "frac_leukemic_AML3_slider = widgets.FloatSlider(value=default_values['frac_leukemic_AML3'], min=0, max=1, step=0.01, description=\"Fraction leukemic cells in AML3\", style={'description_width': 'initial'}, layout=slider_layout)\n",
+    "# Create a button to restore defaults\n",
+    "restore_defaults_button = widgets.Button(description=\"Restore Defaults\", button_style='primary')\n",
+    "restore_defaults_button.on_click(restore_defaults)\n",
     "\n",
-    "mean_healthy_x_slider = widgets.FloatSlider(value=default_values['mean_healthy_x'], min=-10, max=10, step=0.1, description=\"Mean of non-leukemic cluster (X-axis)\", style={'description_width': 'initial'}, layout=slider_layout)\n",
-    "std_healthy_x_slider = widgets.FloatSlider(value=default_values['std_healthy_x'], min=0, max=3, step=0.1, description=\"Standard deviation of non-leukemic cluster (X-axis)\", style={'description_width': 'initial'}, layout=slider_layout)\n",
-    "mean_healthy_y_slider = widgets.FloatSlider(value=default_values['mean_healthy_y'], min=-10, max=10, step=0.1, description=\"Mean of non-leukemic cluster (Y-axis)\", style={'description_width': 'initial'}, layout=slider_layout)\n",
-    "std_healthy_y_slider = widgets.FloatSlider(value=default_values['std_healthy_y'], min=0, max=3, step=0.1, description=\"Standard deviation of non-leukemic cluster (Y-axis)\", style={'description_width': 'initial'}, layout=slider_layout)\n",
+    "# Define the interactive plot with sliders\n",
+    "simulation_plot = interactive(\n",
+    "    plot_simulation,\n",
+    "    **{key: slider for key, slider in sliders.items()}\n",
+    ")\n",
     "\n",
-    "dist_healthy_LAIP1_slider = widgets.FloatSlider(value=default_values['dist_healthy_LAIP1'], min=0, max=5, step=0.1, description=\"Distance between LAIP1+ and non-leukemic clusters\", style={'description_width': 'initial'}, layout=slider_layout)\n",
-    "std_LAIP1_x_slider = widgets.FloatSlider(value=default_values['std_LAIP1_x'], min=0, max=3, step=0.1, description=\"Standard deviation of LAIP1+ cluster (X-axis)\", style={'description_width': 'initial'}, layout=slider_layout)\n",
-    "std_LAIP1_y_slider = widgets.FloatSlider(value=default_values['std_LAIP1_y'], min=0, max=3, step=0.1, description=\"Standard deviation of LAIP1+ cluster (Y-axis)\", style={'description_width': 'initial'}, layout=slider_layout)\n",
+    "supervised_plot = interactive(\n",
+    "    plot_supervised,\n",
+    "    **{key: slider for key, slider in sliders.items()}\n",
+    ")\n",
     "\n",
-    "dist_healthy_LAIP2_slider = widgets.FloatSlider(value=default_values['dist_healthy_LAIP2'], min=0, max=5, step=0.1, description=\"Distance between LAIP2+ and non-leukemic clusters\", style={'description_width': 'initial'}, layout=slider_layout)\n",
-    "std_LAIP2_x_slider = widgets.FloatSlider(value=default_values['std_LAIP2_x'], min=0, max=3, step=0.1, description=\"Standard deviation of LAIP2+ cluster (X-axis)\", style={'description_width': 'initial'}, layout=slider_layout)\n",
-    "std_LAIP2_y_slider = widgets.FloatSlider(value=default_values['std_LAIP2_y'], min=0, max=3, step=0.1, description=\"Standard deviation of LAIP2+ cluster (Y-axis)\", style={'description_width': 'initial'}, layout=slider_layout)"
+    "cluster_with_normal_plot = interactive(\n",
+    "    plot_cluster_with_normal,\n",
+    "    **{key: slider for key, slider in sliders.items()}\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
+   "id": "bccd89d9-60c5-426e-b729-7d5a6af1c908",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "117787735de245bf87e6ea010109e3e5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=10000, description='Total cells', layout=Layout(width='400px'), max=1000…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5e9de54bfa2c4e07a7ab829451da8cc5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(button_style='primary', description='Restore Defaults', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Display the interactive plot and the restore defaults button\n",
+    "display(simulation_plot, restore_defaults_button)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "id": "8b253ac0-dce8-4a14-860b-e649f876e69b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "297a23e479ea47adb5eb4b4959a08c38",
+       "model_id": "9d965a2dccb74a60af89d11282b484c6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -153,7 +184,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b1b3b3ab97664b7db7cda8f446e0e4f2",
+       "model_id": "5e9de54bfa2c4e07a7ab829451da8cc5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -166,41 +197,20 @@
     }
    ],
    "source": [
-    "# Create a button to restore defaults\n",
-    "restore_defaults_button = widgets.Button(description=\"Restore Defaults\", button_style='primary')\n",
-    "restore_defaults_button.on_click(restore_defaults)\n",
-    "\n",
-    "# Define the interactive plot with sliders\n",
-    "interactive_plot = interactive(plot_supervised,\n",
-    "                               n_cells = n_cells_slider,\n",
-    "                               frac_leukemic_AML1 = frac_leukemic_AML1_slider,\n",
-    "                               frac_leukemic_AML2 = frac_leukemic_AML2_slider,\n",
-    "                               frac_leukemic_AML3 = frac_leukemic_AML3_slider,\n",
-    "                               mean_healthy_x = mean_healthy_x_slider,\n",
-    "                               std_healthy_x = std_healthy_x_slider,\n",
-    "                               mean_healthy_y = mean_healthy_y_slider,\n",
-    "                               std_healthy_y = std_healthy_y_slider,\n",
-    "                               dist_healthy_LAIP1 = dist_healthy_LAIP1_slider,\n",
-    "                               std_LAIP1_x = std_LAIP1_x_slider,\n",
-    "                               std_LAIP1_y = std_LAIP1_y_slider,\n",
-    "                               dist_healthy_LAIP2 = dist_healthy_LAIP2_slider,\n",
-    "                               std_LAIP2_x = std_LAIP2_x_slider,\n",
-    "                               std_LAIP2_y = std_LAIP2_y_slider)\n",
-    "\n",
     "# Display the interactive plot and the restore defaults button\n",
-    "display(interactive_plot, restore_defaults_button)"
+    "display(supervised_plot, restore_defaults_button)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "85185c80-d565-4e29-8fb0-a9bbd6e50286",
+   "execution_count": 46,
+   "id": "d3b29959-d545-4010-9cea-330a7ccf099c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a62325d3c9d542a991c57b2bd02e1de1",
+       "model_id": "a510862a8f314f37a369134f483bb599",
        "version_major": 2,
        "version_minor": 0
       },
@@ -214,7 +224,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2713cf08f03444328faf0bae23d388a0",
+       "model_id": "5e9de54bfa2c4e07a7ab829451da8cc5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -227,35 +237,13 @@
     }
    ],
    "source": [
-    "# Create a button to restore defaults\n",
-    "restore_defaults_button = widgets.Button(description=\"Restore Defaults\", button_style='primary')\n",
-    "restore_defaults_button.on_click(restore_defaults)\n",
-    "\n",
-    "# Define the interactive plot with sliders\n",
-    "interactive_plot = interactive(plot_simulation,\n",
-    "                               n_cells = n_cells_slider,\n",
-    "                               frac_leukemic_AML1 = frac_leukemic_AML1_slider,\n",
-    "                               frac_leukemic_AML2 = frac_leukemic_AML2_slider,\n",
-    "                               frac_leukemic_AML3 = frac_leukemic_AML3_slider,\n",
-    "                               mean_healthy_x = mean_healthy_x_slider,\n",
-    "                               std_healthy_x = std_healthy_x_slider,\n",
-    "                               mean_healthy_y = mean_healthy_y_slider,\n",
-    "                               std_healthy_y = std_healthy_y_slider,\n",
-    "                               dist_healthy_LAIP1 = dist_healthy_LAIP1_slider,\n",
-    "                               std_LAIP1_x = std_LAIP1_x_slider,\n",
-    "                               std_LAIP1_y = std_LAIP1_y_slider,\n",
-    "                               dist_healthy_LAIP2 = dist_healthy_LAIP2_slider,\n",
-    "                               std_LAIP2_x = std_LAIP2_x_slider,\n",
-    "                               std_LAIP2_y = std_LAIP2_y_slider)\n",
-    "\n",
-    "# Display the interactive plot and the restore defaults button\n",
-    "display(interactive_plot, restore_defaults_button)"
+    "display(cluster_with_normal_plot, restore_defaults_button)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e0664f6-96e6-4605-adb3-c47e0b1287f7",
+   "id": "6e5533d4-d021-48ad-ba85-36e95721d778",
    "metadata": {},
    "outputs": [],
    "source": []
