Update file names

--- a/interactive.ipynb
+++ b/interactive.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "c8472e5b-26c9-4441-9511-6f65f0f57990",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "8970330c-06f6-4e71-8c2d-30bffc32d0fd",
    "metadata": {},
    "outputs": [
@@ -37,14 +37,14 @@
    ],
    "source": [
     "from simulate import simulate_samples\n",
-    "from plots import plot_simulation, plot_supervised, plot_cluster_with_normal\n",
+    "from plots import plot_simulation, plot_supervised, plot_cluster_with_normal, plot_novelty_detection\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "ea1fe119-f079-4d4f-be73-04793f7575b1",
    "metadata": {},
    "outputs": [],
@@ -118,19 +118,24 @@
     "cluster_with_normal_plot = interactive(\n",
     "    plot_cluster_with_normal,\n",
     "    **{key: slider for key, slider in sliders.items()}\n",
+    ")\n",
+    "\n",
+    "novelty_plot = interactive(\n",
+    "    plot_novelty_detection,\n",
+    "    **{key: slider for key, slider in sliders.items()}\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "bccd89d9-60c5-426e-b729-7d5a6af1c908",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "589090ed3eff409aa90f2bc67164a3f6",
+       "model_id": "dfe97ad4161f46d5833535ac8b3ddc9b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -144,7 +149,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3fc562c4e6b24cc88d135f747201f7c6",
+       "model_id": "4b6b9a6d8c2342debed533ed01440e36",
        "version_major": 2,
        "version_minor": 0
       },
@@ -163,14 +168,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "8b253ac0-dce8-4a14-860b-e649f876e69b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e2a3280fb39749f38b0cb412af32f2fd",
+       "model_id": "6e9d00db24db4c9ca9796f7927ef42d6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -184,7 +189,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e8472f076db8437c8544b4b11d381f00",
+       "model_id": "e81effab10f14b399bd547007a450488",
        "version_major": 2,
        "version_minor": 0
       },
@@ -203,14 +208,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "d3b29959-d545-4010-9cea-330a7ccf099c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8555de813eed4193814db66f8b6d7d6d",
+       "model_id": "8e68925714094382b445eb7766ae82a4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -224,7 +229,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e8472f076db8437c8544b4b11d381f00",
+       "model_id": "e81effab10f14b399bd547007a450488",
        "version_major": 2,
        "version_minor": 0
       },
@@ -242,11 +247,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6e5533d4-d021-48ad-ba85-36e95721d778",
+   "execution_count": 9,
+   "id": "f9fa8620",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "782e62943e4b47b0b667f37ed3ad3261",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=10000, description='Total cells', layout=Layout(width='400px'), max=1000…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3a86fa64d449429a95708c885f84faaa",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(button_style='primary', description='Restore Defaults', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(novelty_plot, restore_defaults_button)"
+   ]
   }
  ],
  "metadata": {
@@ -265,7 +301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
